updated all project pages

--- a/about.html
+++ b/about.html
@@ -55,9 +55,9 @@
       <div class="panel context">
         <div class="context-summary">
           <h2>What I Do</h2>
-          <h3>
+          <p class="p-XL">
             I live in Washington DC and work at Deloitte Digital, primarily with federal government clients.
-          </h3>
+          </p>
 
           <div class="short-divider"></div>
           <p> 
@@ -66,6 +66,8 @@
           <p>
             So far, during my time at Deloitte, I've supported and led half a dozen projects, ranging from 4-week usability evaluations to 9-month digital transformations. I also founded and led a grassroots community for junior designers and contributed to several initiatives focused on the new-hire experience.
           </p>
+
+          <button class="secondary-btn" onclick="location.href='resume.html';" value="Download Resume"; target="_blank">View Resume</button>
         </div>
 
         <div class="context-specifics">
