--- a/fha.html
+++ b/fha.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-	<title>Emily Porat | FHA Website Redesign</title>
+	<title>Emily Porat | Federal Website Redesign</title>
 	<link rel="stylesheet" type="text/css" href="styles/global.css">
 	<link rel="stylesheet" type="text/css" href="styles/global-mobile.css">
 	<link rel="stylesheet" type="text/css" href="styles/nav.css">
@@ -50,7 +50,7 @@
 			<div class="title">
 				<div>
 					<h4>2020 • Deloitte Digital • Housing</h4>
-					<h1 style="color: black">FHA Website Redesign</h1>
+					<h1 style="color: black">FHA.gov Website Redesign</h1>
 				</div>
 			</div>
 		</div>
@@ -60,58 +60,130 @@
 
 	<div class="panel context">
 		<div class="context-summary">
-			<h2>Context</h2>
-			<h3>
-				I co-led the redesign and launch of fha.gov, the Federal Housing Administration’s consumer-facing site, which serves over 8 million single family homeowners. 
-			</h3>
-			<div class="short-divider"></div>
-			<p>	
-				The Federal Housing Administration, part of the larger Department of Housing and Urban Development, engaged Deloitte to build a standalone FHA.gov site. Their primary audience is first-time homebuyers interested in an FHA-insured mortgage, which allows folks to put as little as 3.5% down on the purchase of a single family home. 	
+			<h2>Project Overview</h2>
+			<p class="p-XL">
+				The Federal Housing Administration serves homeowners, homebuyers, renters, and lenders. All their content was housed within HUD.gov, which had a dated look & feel and content all over the place: mainly, their Housing section combined business content and consumer content in ways that made it very difficult for consumers to find answers and take action. 
 			</p>
-			<p>
+
+			<div class="space"></div>
+
+			<h3>Approach</h3>
+			<p>	
 				My team began by deploying a cleaned-up ‘front door’ with a few key content pages. Next, we conducted in-depth research, including a heuristic evaluation and stakeholder interviews. Finally, we rebuilt the site from the ground up: we defined a new IA, created the main content templates, and refined the custom design system that I built during phase I.
 			</p>
-			<p><em style="font-weight: 900">5 min read time</em></p>
+
+			<div class="space"></div>
+
+			<h3>Outcome</h3>
+			<p>
+				The 1.0 version of FHA.gov launched in June 2020. The design team handed off 25 2.0 high-fidelity templates for future development.
+			</p>
+
 		</div>
 
 		<div class="context-specifics">
-			<h4>Length</h4>
-			<div class="context-description"><p>9 months</p></div>
-			<h4>Team</h4>
-			<div class="context-description"><p>I co-lead research & design for a team of 12.</p></div>
-			<h4>Skills</h4> 
-			<div class="context-description"><p>Heuristic Evaluation, User Interview, Usability Testing, Affinity Mapping, Wireframing, Prototyping, Style & Brand Development</p></div>
+
+			<h4>Team</h4><div class="context-description"><p>Me, Another UX Designer, 1 Creative Director, 1 PM, 3 Engineers, 1 QA, 1 Engagement Manager</p></div>
+
+			<h4>Role</h4><div class="context-description"><p>I lead visual design for phase 1 and co-lead research & design for phase 2 (with oversight from a CD).</p></div>
+			
+			<h4>Responsibilities</h4> <div class="context-description"><p>Heuristic Evaluation, Stakeholder & User Interviews, Usability Testing, Affinity Mapping, Wireframing, Prototyping, UI Design, Style & Brand Development</p></div>
+			
 			<h4>Tools</h4><div class="context-description"><p>Sketch, InVision, Abstract, Excel</p></div>
+			
+			<h4>Length</h4><div class="context-description"><p>9 months</p></div>
 		</div>
+	</div>
+
+	<div class="full-width-mid-page" style="margin-bottom: 0">
+		<div class="panel dark" style="background-color: var(--pink)">
+			<div class="mid-panel-text" style="padding: 10%;">
+				<h4>How might we</h4>
+				<h2 style="color: black">Demystify the first-time homebuyer experience for those who want to put as little as 3.5% down on the purchase of a single family home</h2>
+			</div>
+		</div>
+	</div>
+
+
+	<div class="panel" id="Process">
+		<h2 class="body right">Process</h2>
+			<div class="body right">
+				<p class="p-XL">I lead the first three activities and co-lead the last 4 activities over the course of 9 months:</p>
+				
+				<div  class="space"></div>
+
+				<div class="small-highlight" style="border-color: var(--pink)"><h3>Brand Refresh</h3>
+				<p><b style="font-family: 'Barlow Medium'">Goal:</b> Pinpoint visual goals for the future of FHA.gov</p></div>
+
+				<div  class="space"></div>
+
+				<div class="small-highlight" style="border-color: var(--pink)"><h3>Heuristic Evaluation*</h3>
+				<p><b style="font-family: 'Barlow Medium'">Goal:</b> Identify major usability issues and familiarize myself with the site</p></div>
+
+				<div  class="space"></div>
+
+				<div class="small-highlight" style="border-color: var(--pink)"><h3>1.0 Launch + UI Design</h3>
+				<p><b style="font-family: 'Barlow Medium'">Goal:</b> Provide a cleaned-up front door for FHA-specific web traffic</p></div>
+
+				<div  class="space"></div>
+
+				<div class="small-highlight" style="border-color: var(--pink)"><h3>Stakeholder* + User Research</h3>
+				<p><b style="font-family: 'Barlow Medium'">Goal:</b> Understand business goals and homebuyer + homeowner needs</p></div>
+
+				<div  class="space"></div>
+
+				<div class="small-highlight" style="border-color: var(--pink)"><h3>Information Architecture</h3>
+				<p><b style="font-family: 'Barlow Medium'">Goal:</b> Restructure fha.gov's skeleton + structure to improve findability given new research insights</p></div>
+
+				<div  class="space"></div>
+
+				<div class="small-highlight" style="border-color: var(--pink)"><h3>2.0 UI Design</h3>
+				<p><b style="font-family: 'Barlow Medium'">Goal:</b> Clean up existing components and build new templates for dev handoff</p></div>
+
+				<div  class="space"></div>
+
+
+				<div class="small-highlight" style="border-color: var(--pink)"><h3>Design System*</h3>
+				<p><b style="font-family: 'Barlow Medium'">Goal:</b> Organize, formalize, and document the component library for developers and the client</p></div>
+
+				<div  class="space"></div>
+				<p>*Omitted from this case study for brevity</p>
+
+            <div class="so-what" style="background-color: rgba(254, 112, 98, .2); border-left: 10px solid var(--pink); ">
+        		<h4>What we didn't do</h4>
+        		<p>The team was able to do some family & friends recruiting for usability testing as we built out the 2.0 designs, but we didn't talk to a wide range of target users due to limited capacity and ability to reach that group.</p>
+        	</div> 
+
+			</div>
 	</div>
 
 	<div class="full-width-mid-page">
 		<div class="panel dark" style="background-color: var(--mediumgray)">
 			<h2 style="padding-top: 5%;">Where we started</h2>
-			<h3 style="padding-left: 15%; padding-right: 15%">All of FHA’s content was housed (no pun intended) within the Housing section of HUD.gov, their parent agency’s site. Part I of the project was launching fha.gov as a standalone site.</h3>
+			<p class="p-XL" style="padding-left: 15%; padding-right: 15%">All of FHA’s content was housed (no pun intended) within the Housing section of HUD.gov, their parent agency’s site. Part I of the project was launching fha.gov as a standalone site.</p>
 			<img style="padding-top: 5%" class="pic-left" src="pics/FHA/where-we-started.png">
 		</div>
 	</div>
 
-<!-- 	<div class="panel" id="summary">
-		<h2 class="body right">Branding Refresh</h2>
+
+	<div class="panel" id="summary">
+		<h2 class="body right">Brand Refresh</h2>
 			<div class="body right">
-				<p>When it came to branding and style for the new FHA.gov, we had a couple of options. Another Deloitte team had already conducted a branding workshop and developed mood boards and social media guidance for FHA Catalyst, one of FHA's ongoing technology modernization initiatives, so I developed two style guides (see below): one with the original HUD branding, refreshed, and one with the FHA Catalyst branding, adapted from existing mood boards.</p>
+				<p class="p-XL">I developed two style guides one with the original HUD branding, refreshed, and one with the new "FHA Catalyst" branding, adapted from existing mood boards.</p>
+
+				<img style="padding: 0%; width: 100%" class="pic-left" src="pics/FHA/branding-options.png">
 
 				<p>The client decided to move forward with the Catalyst branding. Given that this soft launch was meant to be a quick and light lift, we strategically selected a few key screens to redesign with the new branding, and carried over the underlying IA from the Housing portion of the HUD.gov site.</p>
 			</div>
 	</div>
 
-	<div class="full-width-mid-page">
-		<div class="panel dark" style="background-color: white">
-			<img class="pic-left" src="pics/FHA/branding-options.png">
-		</div>
-	</div> -->
 
 	<div class="panel" id="summary">
-		<h2 class="body right">1.0 Launch</h2>
+		<h2 class="body right">1.0 Launch + UI Design</h2>
 			<div class="body right">
-				<p>We launched <a target="_blank" href="http://FHA.gov">FHA.gov</a> on June 1, 2020, with a redesigned landing page, About page, Catalyst page, and COVID information page.</p>
+				<p class="p-XL">We launched <a target="_blank" href="http://FHA.gov">FHA.gov</a> on June 1, 2020, with a redesigned landing page, About page, Catalyst page, and COVID information page.</p>
+
+				<div class="space"></div>
 
 				<p>We couldn’t do any user research, so we chose not to spend time reconstructing the IA based on assumptions. Instead, we ported over the IA from the housing section of HUD.gov and I focused on creating clean, simple page templates for three key pages. To optimize for readability and clarity, I applied:</p>
 				<ul>
@@ -126,14 +198,14 @@
 	<div class="panel" id="user research">
 		<h2 class="body right">User Research</h2>
 			<div class="body right">
-				<p>With the initial branding refresh wrapped up, we turned to the research phase of the larger engagement. We took a three step approach:</p>
+				<p class="p-XL">With the initial branding refresh wrapped up, we turned to the research phase of the larger engagement. We took a three step approach:</p>
 				<ul>
 					<li>Heuristic evaluation – analyze current state of the FHA website experience </li>
 					<li>Stakeholder Interviews – semi-structured conversations to understand FHA priorities</li>
 					<li>User Interviews – semi-structured conversations to understand user needs and preferences, pain points, and usability issues</li>
 				</ul> 
 
-				<p>I'm going to focus on the user interviews for the sake of brevity. We conducted 23 one-on-one ethnographic interviews to assess participants’ cognitive, behavioral, and emotional approach to performing tasks with a focus on their interaction with the HUD and FHA websites.</p>
+				<p>We conducted 23 one-on-one ethnographic interviews to assess participants’ cognitive, behavioral, and emotional approach to performing tasks with a focus on their interaction with the HUD and FHA websites.</p>
 				<p>Because FHA serves such a broad array of users, we interviewed participants from a variety of user groups, including consumers and business stakeholders across the Single Family, Multifamily, and Healthcare programs. </p>
 				<p>We didn't have time to go through the typical modeling exercises after Affinity Diagramming, so I pulled together user group 'profiles.' These profiles were a communication and prioritization tool. They helped guide our design decisions and helped our client understand those decisions.</p>
 <!-- 				<h3>Heuristic Evaluation</h3>
@@ -218,8 +290,8 @@
 
 	<div class="panel" id="IA">
 		<div class="body right">
-			<h2>Design Process</h2>
-				<p>Once we defined the IA, my teammate and I started creating the actual page designs.</p>
+			<h2>2.0 UI Design</h2>
+				<p class="p-XL">Once we defined the IA, my teammate and I started creating the actual page designs.</p>
 				<ul>
 					<li>We took stock of the existing design assets (which I had originally created from scratch in about a month). We decided to use color more sparingly for a simpler feel, tweaked some of the typography styles for readability, and introduced a few new components.</li>
 					<li>Since we were designing for a Drupal site, we would be delivering templates. We picked a representative slice of pages, ideated on layouts, and narrowed in on 5 distinct templates, shown below. We ultimately delivered 25 high-fidelity mockups, covering all L1 landing pages and most “Standalone Content” pages.</li>
