--- a/health-nonprofit.html
+++ b/health-nonprofit.html
@@ -54,23 +54,27 @@
 		<div class="context-summary">
 			<h2>Project Overview</h2>
 
-			<h3>
-				The organization was struggling to reach a large segment of their target audience: individuals living with a particular neurological disorder who want to learn about the condition or get involved with the community. The client's website has a wealth of information, but users can't find what they need and tend to abandon the site quickly.
-			</h3>
+			<p class="p-XL">
+				The organization was struggling to reach a large segment of their target audience: individuals living with a particular neurological disorder. The client's website has a wealth of information, but users can't find what they need and tend to abandon the site quickly.
+			</p>
 			
 			<div class="space"></div>
 			
-			<h4>Approach</h4>
+			<h3>Approach</h3>
 			<p>
 				Our team evaluated the client's digital footprint from a UX, content, and data perspective with the goals of 1) understanding why users can't find what they need and 2) providing strategic recommendations to improve the overarching user experience.
 			</p>
 			
 			<div class="space"></div>
 
-			<h4>Outcome</h4>
+			<h3>Outcome</h3>
 			<p>
 				We delivered a comprehensive report that included all our stakeholder and user research findings, synthesis artifacts (Modes & Mindsets and Journey Maps) and outputs from collaborative Product Visioning + Roadmapping sessions.
 			</p>
+            <div class="so-what">
+        		<p class="p-XL">"I feel like our website is akin to us being dropped in the Amazon rainforest and you are providing us the GPS to get out"</p>
+        		<p>-Client, re: Heuristic Evaluation & Stakeholder Research</p>
+        	</div> 
 
 		</div>
 
@@ -78,11 +82,11 @@
 			<h4>Team</h4> 
 			<div class="context-description"><p>Me, Junior Designer, Product Manager, Content Strategist, Data Strategists, Engagement Manager</p></div>
 
-			<h4>Responsibilities</h4> 
-			<div class="context-description"><p>I led the UX workstream with minimal support from a senior designer. I presented all design findings to the client and mentored a junior designer.</p></div>
-
 			<h4>Role</h4>
 			<div class="context-description"><p>I led the UX workstream with minimal support from a senior designer. I presented all design findings to the client and mentored a junior designer.</p></div>
+
+			<h4>Responsibilities</h4> 
+			<div class="context-description"><p>Heuristic Evaluation, User & Stakeholder Interviews, Synthesis (Affinity Diagramming), Synthesis Artifacts (Modes & Mindsets, Journey Maps)</p></div>
 
 			<h4>Tools</h4>
 			<div class="context-description"><p>Mural, PPT</p></div>
@@ -108,21 +112,52 @@
 	<div class="panel" id="Component Audit">
 		<h2 class="body right">Process</h2>
 			<div class="body right">
-				<h3>We had 12 weeks and a client with a large appetite for interviews. I owned the following activities:</h3>
-				<ul>
-					<li>Heuristic Evaluation - Usability analysis of key pages on the client's website.</li>
-					<li>Stakeholder Research - Guided conversations with (17 members of) internal leadership and (11) external partners to understand organizational goals, priorities, and challenges.</li>
-					<li>User Research - Guided conversations and usability testing sessions with (16) end users to understand their lived experiences and approach to using the website.</li>
-					<li>Synthesis - Affinity diagramming to pull out key themes</li>
-					<li>Modest & Mindsets + Journey Maps - Approach + experience driven models that will help us understand user needs and prioritize features.</li>
-				</ul>
+				<p class="p-XL">We had 12 weeks and a client with a large appetite for interviews. I owned the following activities:</p>
+				
+				<div  class="space"></div>
+
+				<div class="small-highlight" style="border-color: var(--purple)"><h3>Heuristic Evaluation</h3>
+<!-- 				<p>Usability analysis of key pages on the client's website.</p> -->
+				<p><b style="font-family: 'Barlow Medium'">Goal:</b> Pinpoint severe usability issues and familiarize myself with the site.</p></div>
+
+				<div  class="space"></div>
+
+				<div class="small-highlight" style="border-color: var(--purple)"><h3>Interviews</h3>
+				<p>Guided conversations with 17 members of internal leadership, 11 external partners, and 16 end users.</p>
+				<p><b style="font-family: 'Barlow Medium'">Goal:</b> For stakeholderes, understand organizational goals, priorities, and challenges. For users, understand their lived experiences, needs, barriers to accessing information.</p></div>
+
+				<div  class="space"></div>
+
+				<div class="small-highlight" style="border-color: var(--purple)"><h3>Usability Testing</h3>
+<!-- 				<p>Collect qualitative and quantitatve data on user behavior and approach to using the website.</p> -->
+				<p><b style="font-family: 'Barlow Medium'">Goal:</b> Uncover key usability issues - confirm or deny heuristic findings. Prioritize focus areas for redesign.</p></div>
+
+				<div  class="space"></div>
+
+				<div class="small-highlight" style="border-color: var(--purple)"><h3>Synthesis</h3>
+<!-- 				<p>Affinity diagramming to pull out key themes.</p> -->
+				<p><b style="font-family: 'Barlow Medium'">Goal:</b> Build a robust understanding of stakeholder and user viewpoints.</p></div>
+
+				<div  class="space"></div>
+
+				<div class="small-highlight" style="border-color: var(--purple)"><h3>Modest & Mindsets + Journey Maps</h3>
+<!-- 				<p>Approach + experience driven models.</p> -->
+				<p><b style="font-family: 'Barlow Medium'">Goal:</b> Help us understand user needs and prioritize features.</p></div>
+
+				<div  class="space"></div>
+
+            <div class="so-what">
+        		<h4>Why these methods?</h4>
+        		<p>While it would've been nice to do a diary study to understand more organic usage of the site or true ethnographic field research, we were on a tight timeline and in the midst of a global pandemic. Zoom-based interviews and usability testing got us 80% of the way there in terms of understanding user needs.</p>
+        	</div> 
+
 			</div>
 	</div>
 
 	<div class="panel" id="What We Learned">
 		<h2 class="body right">What We Learned</h2>
 			<div class="body right">
-				<h3>These were are overarching takeaways from all our research activities:</h3>
+				<p class="p-XL">These were are overarching takeaways from all our research activities:</p>
 				<ol>
 					<li>Usability issues stem from organizational issues</li>
 					<li>Information overload hinders understandability and findability</li>
@@ -173,7 +208,7 @@
 					<li>Users who are unfamiliar with the org need to build trust in the organization before committing to getting involved with their time, money, or other resources.</li>
 				</ul>
 			</div>
-			<img class="pic-left" src="pics/Nonprofit/stakeholder.png">
+			<img class="pic-left" src="pics/Nonprofit/trust.png">
 		</div>
 	</div>
 
@@ -194,26 +229,31 @@
 	<div class="panel" id="Component Audit">
 		<h2 class="body right">Our Recommendations</h2>
 			<div class="body right">
-				<h3>To enable the client to employ nuanced personalization strategies, I created nuanced models - Modes, Mindsets, and Journeys - that provide insight on the characteristics, behaviors, priorities beyond demographics.</h3>
+				<p class="p-XL">To enable the client to employ nuanced personalization strategies, I created nuanced models - Modes, Mindsets, and Journeys - that provide insight on the characteristics, behaviors, priorities <i>beyond</i> demographics.</p>
 
 				<div class="space"></div>
 
-				<h4>Modes</h4>
+				<h3>Modes</h3>
 				<p>Behaviors or tasks. Modes outline what people do throughout their journey with their condition.</p>
 
 				<div class="space"></div>
 
-				<h4>Mindsets</h4>
+				<h3>Mindsets</h3>
 				<p>Characteristics or attributes. Mindsets help us understand how people experience their journey with their condition.</p>
 
 				<div class="space"></div>
 
-				<h4>Journeys</h4>
+				<h3>Journeys</h3>
 				<p>The experience of a mindset within various modes. By overlaying a mindset onto a mode, or several modes, we can identify the user’s perspective and needs in a journey.</p>
 
-				<div class="short-divider"></div>
+				<div class="space"></div>
 
-				<p>I created 9 Mindsets and 11 Modes. To narrow in on priorities, we had the client select their top 3 mindsets that they <i>must</i> serve with their website. I created corresponding journeys for those 3 mindsets that.</p>
+				<div class="so-what">
+					<h4>Why Modes & Mindsets Over Personas?</h4>
+					<p>The community that this client is trying to reach is diverse in diagnosis, background, and experience. Creating <i>Patient</i>, <i>Caregiver</i>, and <i>Supporter</i> personas would be reductive, and most importantly, unhelpful for making design decisions.</p>
+				</div>
+
+				<p>I created 9 Mindsets and 11 Modes. To narrow in on priorities, we had the client select their top 3 mindsets that they <i>must</i> serve with their website. I created corresponding journeys for those 3 mindsets. See an example below.</p>
 			</div>
 	</div>
 
@@ -235,35 +275,40 @@
 	<div class="panel" id="Component Audit">
 		<h2 class="body right">Design Principles</h2>
 			<div class="body right">
-				<h3>Along with identifying specific features and improvement opportunities, I developed a list of design principles for the client to employ during any future redesign effort:</h3>
+				<p class="p-XL">Along with identifying specific features and improvement opportunities, I developed a list of design principles for the client to employ during any future redesign effort:</p>
 
 				<div class="space"></div>
 
-				<h4>Accessible</h4>
+				<h3>Accessible</h3>
 				<p>The website will provide content that is universally easy to understand and find and features that are easy to use, regardless of user ability or background.</p>
 
 				<div class="space"></div>
 
-				<h4>Personalized</h4>
+				<h3>Personalized</h3>
 				<p>The website will leverage the research we have done on user journeys as the organization works on leveraging behavioral data to feed personalized content to users throughout their journey.</p>
 
 				<div class="space"></div>
 
-				<h4>Person (with condition)-Centric</h4>
+				<h3>Person (with condition)-Centric</h3>
 				<p>The website will center around the experience of people with the condition. It aims to support and connect them and their caregivers before any other group.</p>
 
 				<div class="space"></div>
 
-				<h4>Trustworthy</h4>
+				<h3>Trustworthy</h3>
 				<p>The website will instill trust in its users by presenting fact-based, accurate, updated information and clearly communicating their mission and brand.</p>
 
+
+				<div class="so-what">
+					<h4>So what?</h4>
+					<p>These principles are simple and intuitive. They cleanly summarize everything we learned about user needs, and the client can use them as guideposts for future decision making.</p>
+				</div>
 			</div>
 	</div>
 
 	<div class="panel" id="Outcome">
 		<h2 class="body right">Outcome</h2>
 		<div class="body right">
-            <h3>The synthesis models, design principles, and the org's new and improved product vision + prioritized backlog we delivered will help the client turn our research into action.</h3>
+            <p class="p-XL">The synthesis models, design principles, and the org's new and improved product vision + prioritized backlog we delivered will help the client turn our research into action.</p>
 
             <div class="space"></div>
 
@@ -273,17 +318,10 @@
             	<li>I had to figure out how to let go some of my control and trust my mentee to deliver. I had to figure out how to effectively delegate and help us both grow -- like overcoming the desire to re-do work myself rather than provide feedback.</li>
             </ul>
 
-            <div class="space"></div>
-
-            <div style="padding: 5%; background-color: var(--lightpink)">
-            	<h4>Testimonials</h4>		
-            	<div class="last"><div class="short-divider"></div></div>
-            	<p>"I feel like our website is akin to us being dropped in the Amazon rainforest and you are providing us the GPS to get out" <i>-Client, re: Heuristic Evaluation & Stakeholder Research</i></p>
-
-            	<div class="space"></div>
-
-            	<p>"This here really helps me get an understanding of the resources we need and what we need to focus on when we do the redesign. When we look at the user experience, moving the site from informational to educational. This is really really good information" <i>-Client, re: Modes & Mindsets</i></p>
-        	</div> 
+<!--             <div class="so-what">
+            	<h3>"This here really helps me get an understanding of the resources we need and what we need to focus on when we do the redesign. When we look at the user experience, moving the site from informational to educational. This is really really good information"</h3>
+            	<p>- Client, re: Modes & Mindsets</p>
+        	</div>  -->
     	</div>
     </div>
 
