--- a/l&d.html
+++ b/l&d.html
@@ -53,7 +53,7 @@
 	  	<div class="panel context">
 			<div class="context-summary">
 			<h2>Context</h2>
-				<h3>During my summer at Deloitte Digital as a UX Design Intern, I redesigned the Learning and Development Portal: a website through which Deloitte Digital practitioners can request to attend external continuing education (CED) opportunities such as conferences and trainings.</h3>
+				<p class="p-XL">During my summer at Deloitte Digital as a UX Design Intern, I redesigned the Learning and Development Portal: a website through which Deloitte Digital practitioners can request to attend external continuing education (CED) opportunities such as conferences and trainings.</p>
 				<div class="short-divider"></div>
 				<p>
 				I had full ownership over this project: I created my own project plan and timeline, I decided what methods and tools I wanted to use and learn, and I headed all the group efforts that went into the project.
@@ -68,22 +68,17 @@
 			</div>
 			
 			<div class="context-specifics">
-				<h4>Length</h4>
-					<p>
-						2 months
-					</p>
-				<h4>Team</h4>
-					<p>
-						The Learning team is made up of three others: a product manager, project manager, and senior manager.
-					</p>
-				<h4>Skills</h4> 
-					<p>
-					Heuristic Evaluation, Interviewing, Usability Testing, Affinity Mapping, Product Visioning, Personas, User Stories, Business Process Modeling, Information Architecture, Wireframing, Prototyping, Presenting
-					</p>
-				<h4>Tools</h4> 
-					<p>
-						Adobe InDesign, Sketch, InVision, PowerPoint, A lot of sticky notes
-					</p>
+
+				<h4>Team</h4><div class="context-description"><p>Me, PM, Senior Manager</p></div>
+
+				<h4>Role</h4><div class="context-description"><p>I selected the activities, created a timeline, and led all design work with oversight from my PM and 2 other designers.</p></div>
+
+				<h4>Responsibilities</h4><div class="context-description"><p>Heuristic Evaluation, Interviewing, Usability Testing, Affinity Mapping, Product Visioning, Personas, User Stories, Business Process Modeling, Information Architecture, Wireframing, Prototyping, Presenting</p></div>
+
+				<h4>Tools</h4><div class="context-description"><p>Adobe InDesign, Sketch, InVision, PowerPoint, A lot of sticky notes</p></div>
+
+				<h4>Length</h4><div class="context-description"><p>2 Months</p></div>
+
 			</div>
 	  	</div>
 
@@ -92,7 +87,8 @@
 	  	<div class="panel">
 	  	<h2 class="body right">Process</h2>
 	  	<div class="body right">
-	  		<p>I followed the classic double-diamond process for this 6-week project, splitting each phase into roughly a two-week sprint. </p>
+	  		<p class="p-XL">I followed the classic double-diamond process for this 6-week project, splitting each phase into roughly a two-week sprint. </p>
+
 	  		<p>In the 'Discover' phase, I did a Heuristic Evaluation of the existing portal and conducted 20 interviews and 2 usability tests with users and stakeholders. In 'Define,' I worked with a team to create an Affinity Map from nearly 400 statements gathered from research. We also completed a product visioning session, and I created personas and prioritized user stories. I kicked off 'Develop' with a Crazy 8s session, and eventually worked through several iterations of wireframes and prototypes. In 'Deploy,' I interviewed the developer who will be taking this project forward, created a style guide, and began to work through visual designs for screens.</p>
 	  	</div>
 	  	</div>
