--- a/projects.html
+++ b/projects.html
@@ -59,7 +59,7 @@
     <div class="project-info-large">
       <h4 style="margin-bottom: 10px;">2021 • Deloitte Digital • Health</h4>
       <h2>Health Nonprofit Discovery</h2>
-      <h3>I evaluated the overarching user experience of of a nonprofit's website and provided strategic recommendations that fed into a product roadmap and vision.</h3>
+      <p class="p-XL">I evaluated the overarching user experience of of a nonprofit's website and provided strategic recommendations that fed into a product roadmap and vision.</p>
       <button id="myBtn" onclick="location.href='health-nonprofit.html';" value="Go to health nonprofit Discovery project page">
         <h4>Learn More</h4>
       </button>
@@ -71,7 +71,7 @@
     <div class="project-info-large">
       <h4 style="margin-bottom: 10px;">2021 • Deloitte Digital • Housing</h4>
       <h2>Federal Design System</h2>
-      <h3>I built and organized over 200 scalable, custom symbols, text styles, and layer styles utilizing atomic design principles.</h3>
+      <p class="p-XL">I built and organized over 200 scalable, custom symbols, text styles, and layer styles utilizing atomic design principles.</p>
       <button id="myBtn" onclick="location.href='hud.html';" value="Go to HUD deisgn system project page">
         <h4></i> Learn More</h4>
       </button>
@@ -83,7 +83,7 @@
     <div class="project-info-large">
       <h4 style="margin-bottom: 10px;">2020 • Deloitte Digital • Housing</h4>
       <h2>Federal Website Redesign</h2>
-      <h3>I co-led the redesign and launch of an consumer-facing site that serves over 8 million single family homeowners.</h3>
+      <p class="p-XL">I co-led the redesign and launch of an consumer-facing site that serves over 8 million single family homeowners.</p>
       <button id="myBtn" onclick="location.href='fha.html';" value="Go to FHA Branding Refresh project page">
         <h4><i class="fas fa-lock"></i> Learn More</h4>
       </button>
@@ -92,24 +92,24 @@
   </div>
 
     <!-- Featured project -->
-    <div class="section-large" style="background-color: var(--orange)">
+<!--     <div class="section-large" style="background-color: var(--orange)">
       <div class="project-info-large">
         <h4 style="margin-bottom: 10px;">2019 • Deloitte Digital • Food & Nutrition</h4>
         <h2>Food Management System</h2>
-        <h3>I designed the inventory management & POS system that government workers use to provide food to nearly 100,000 low-income individuals.</h3>
+        <p class="p-XL">I designed the inventory management & POS system that government workers use to provide food to nearly 100,000 low-income individuals.</p>
         <button id="myBtn" onclick="location.href='fms-pos.html';" value="Go to Food Management System project page">
           <h4><i class="fas fa-lock"></i> Learn More</h4>
         </button>
       </div>
       <img class="project-pic-large" src="pics/pos-small.png" alt="A screenshot of a point of sale system on a Salesforce desktop interface and an iPad interface">
-    </div>
+    </div> -->
 
     <!-- Featured project -->
     <div class="section" style="background-color: var(--purple); float: left;">
       <div class="project-info">
         <h4 style="margin-bottom: 10px;">Summer 2018 • Deloitte Digital</h4>
         <h2>Learning & Development Portal</h2>
-        <h3>During my summer internship at Deloitte, I prototyped a website through which employees can request continuing education programs.</h3> 
+        <p class="p-XL">During my summer internship at Deloitte, I prototyped a website through which employees can request continuing education programs.</p> 
         <button onclick="location.href='l&d.html';" value="Go to Learning & Development Portal project page">
           <h4>Learn More</h4>
         </button>
@@ -119,11 +119,11 @@
 
     <!-- Featured project -->
 
-    <div class="section" style="background-color: var(--green); float: right;">
+    <div class="section" style="background-color: var(--orange); float: right;">
       <div class="project-info">
         <h4 style="margin-bottom: 10px;">Fall 2018 • Carnegie Mellon University</h4>
         <h2 >RSVP'd</h2>
-        <h3>For my senior capstone project, I designed a mobile app prototype that helps event planners predict attendance by providing predictability, motivation, and accountability.</h3>
+        <p class="p-XL">For my senior capstone project, I designed a mobile app prototype that helps event planners predict attendance by providing predictability, motivation, and accountability.</p>
         <button onclick="location.href='rsvpd.html';" value="Go to RSVP'd project page">
           <h4>Learn More</h4>
         </button>
