--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
         <div>
           <h4>Work</h4>
           <h2>I work at Deloitte Digital, where I improve digital experiences for government & nonprofit clients.</h2>
-          <h3>I'm a design generalist who loves every part of the process, from research to UI. I focus more on the early stages so we save time + money at the end of the day.</h3>
+          <p class="p-XL">I'm a design generalist who loves every part of the process, from research to UI. I focus more on the early stages so we save time + money at the end of the day.</p>
           <button class="secondary-btn" onclick="location.href='projects.html';" value="View my work"; target="_blank">View my Work</button>
         </div>
       </div>
@@ -82,7 +82,7 @@ $('#footer').load('http://emilyporat.com/footer.html');
         <div>
           <h4>Philosophy</h4>
           <h2>My design process isn't an exact science, but it is scientific.</h2>
-          <h3>I view every design concept as a hypothesis waiting to be tested. Spreadsheets and pro-con lists are my secret weapons when it comes to organizing and synthesizing complexity - which is what I do best.</h3>
+          <p class="p-XL">I view every design concept as a hypothesis waiting to be tested. Spreadsheets and pro-con lists are my secret weapons when it comes to organizing and synthesizing complexity - which is what I do best.</p>
           <button class="secondary-btn"  onclick="location.href='about.html';" value="More about me"; target="_blank">More About Me</button>
         </div>
       </div>
