--- a/health-nonprofit.html
+++ b/health-nonprofit.html
@@ -124,7 +124,7 @@
 
 				<div class="small-highlight" style="border-color: var(--purple)"><h3>Interviews</h3>
 				<p>Guided conversations with 17 members of internal leadership, 11 external partners, and 16 end users.</p>
-				<p><b style="font-family: 'Barlow Medium'">Goal:</b> For stakeholderes, understand organizational goals, priorities, and challenges. For users, understand their lived experiences, needs, barriers to accessing information.</p></div>
+				<p><b style="font-family: 'Barlow Medium'">Goal:</b> For stakeholders, understand organizational goals, priorities, and challenges. For users, understand their lived experiences, needs, barriers to accessing information.</p></div>
 
 				<div  class="space"></div>
 
@@ -262,7 +262,7 @@
 			<div class="mid-panel-text">
 				<h3>Motivated Caregiver Journey</h3>
 				<ul>
-					<li>The “Motivated Caregiver” mindset is responsible for the care and safety of a child who has the disorder our client’s website aims to educate folks about. This user is highly motivated to find information online but is not connected with the larger community.</li> 
+					<li>The “Motivated Caregiver” mindset is responsible for the care and safety of a child with this disorder. This user is highly motivated to find information online but is not connected with the larger community.</li> 
 					<li>The client identified this Mindset as their #1 priority to reach on their website.</li>
 					<li>Contextualizing individual behavior and feelings helped us recommend more tailored opportunities to improve the website, such as positioning itself as a reputable content source <i>before</i> asking users to engage with the community or donate.</li>
 					<li>These opportunities ultimately served as inputs to our Product Roadmap session with the client.</li>
