cleaned up RSVPd and fixed broken links on l&d

--- a/l&d.html
+++ b/l&d.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" type="text/css" href="styles/global.css">
     <link rel="stylesheet" type="text/css" href="styles/global-mobile.css">
     <link rel="stylesheet" type="text/css" href="styles/nav.css">
-    <link rel="stylesheet" type="text/css" href="styles/l&d.css">
     <link rel="stylesheet" type="text/css" href="styles/projects.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <link rel="icon" type="image/x-icon" href="pics/favicon.svg"/>
@@ -385,7 +384,7 @@
 
 		<div class="full-width-mid-page" style="margin-bottom: 0">
 			<div class="panel dark" style="background-color: var(--purple)">
-				<img style="padding-bottom: 0" class="pic-left" src="pics/L&D/comps.png">
+				<img style="padding-bottom: 0" class="pic-left" src="pics/l&d/comps.png">
 			</div>
 		</div>
 
