cleaned up RSVPd and fixed broken links on l&d

--- a/l&d.html
+++ b/l&d.html
@@ -99,7 +99,7 @@
 					<h4>How might we</h4>
 					<h2 style="color: black">Empower practitioners to take advantage of continuing education resources</h2>
 				</div>
-				<img style="padding-bottom: 0" class="pic-left" src="pics/L&D/comps.png">
+				<img style="padding-bottom: 0" class="pic-left" src="pics/l&d/comps.png">
 			</div>
 		</div>
 
