added annotations to phootos on rsvpd and fha

--- a/fha.html
+++ b/fha.html
@@ -191,7 +191,7 @@
 					<li>Highlight boxes to make key information easier to pick out, catering to the human tendency to scan rather than read.</li>
 					<li>An interactive table of contents to provide an overview and easy page navigation so users can jump right to relevant topics.</li>
 				</ul>
-				<img src="pics/FHA/COVID.png" class="pic-right" alt="The COVID-19 Resources page on FHA.gov." style="background-color: white; box-shadow: 0px 0px 5px 5px rgba(100,100,100,0.1);">
+				<img src="pics/FHA/COVID.png" class="pic-right" alt="The COVID-19 Resources page on FHA.gov.">
 			</div>
 	</div>
 
