--- a/footer.html
+++ b/footer.html
@@ -12,7 +12,7 @@
           <p><a href="health-nonprofit.html">Nonprofit Discovery</a></p>
           <p><a href="hud.html">Federal Design System</a></p>
           <p><i style="color: var(--purple)" class="fas fa-lock"></i><a href="fha.html"> Federal Website Redesign</a></p>
-          <p><i style="color: var(--purple)" class="fas fa-lock"></i><a href="fms-pos.html"> Food Management System</a></p>
+<!--           <p><i style="color: var(--purple)" class="fas fa-lock"></i><a href="fms-pos.html"> Food Management System</a></p> -->
           <p><a href="rsvpd.html">RSVP'd</a></p>
           <p><a href="l&d.html">L&D Portal</a></p>
       </div>
