--- a/projects.html
+++ b/projects.html
@@ -105,7 +105,7 @@
     </div> -->
 
     <!-- Featured project -->
-    <div class="section" style="background-color: var(--purple); float: left;">
+    <div class="section-large" style="background-color: var(--purple);">
       <div class="project-info">
         <h4 style="margin-bottom: 10px;">Summer 2018 • Deloitte Digital</h4>
         <h2>Learning & Development Portal</h2>
@@ -114,21 +114,21 @@
           <h4>Learn More</h4>
         </button>
       </div>
-      <img src="pics/l&d.png" class="project-pic" alt="A screenshot of a Deloitte Digital site called the Learning and Development portal">
+      <img src="pics/l&d-proj.png" class="project-pic-large" alt="A screenshot of a Deloitte Digital site called the Learning and Development portal">
     </div>
 
     <!-- Featured project -->
 
-    <div class="section" style="background-color: var(--orange); float: right;">
+    <div class="section-large" style="background-color: var(--orange);">
       <div class="project-info">
         <h4 style="margin-bottom: 10px;">Fall 2018 • Carnegie Mellon University</h4>
-        <h2 >RSVP'd</h2>
+        <h2 >RSVP'd — the attendance app</h2>
         <p class="p-XL">For my senior capstone project, I designed a mobile app prototype that helps event planners predict attendance by providing predictability, motivation, and accountability.</p>
         <button onclick="location.href='rsvpd.html';" value="Go to RSVP'd project page">
           <h4>Learn More</h4>
         </button>
       </div>
-      <img src="pics/rsvpd/wires-score-home.png" class="project-pic" alt="A screenshot of a mobile app with an accountability score and timeline of previous events that led to the score.">
+      <img src="pics/rsvpd-proj.png" class="project-pic-large" alt="A screenshot of a mobile app with an accountability score and timeline of previous events that led to the score.">
     </div>
 
 </div>
